k8s/edge-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edge-proxy
  namespace: gekko
spec:
  selector:
    app: edge-proxy
  ports:
    - name: http
      port: 80
      targetPort: http
